feat(config): name a field processor with a string, not an enum
A layout could only say one of five things was packed inside an element,
because FieldConfig held a FieldProcessor and ConfigFiles turned an unknown
name into an error. So the codec added last week could replace what one of the
five did, but a file packing something else had nowhere to say so, and the
claim that another layout needs a config rather than parser code held only as
far as cardutil's own list.

A processor is now a name, the way a cardutil config file writes it:
FieldConfig.processor() is a String, null where there is none, and
IsoConfig.bitsWithProcessor and Iso8583Options.withCodec take that name.
Anything may be named, withCodec registers a codec under it, and a name nothing
has a codec for leaves the field as it stands, which is what cardutil does with
one it does not recognise.

FieldProcessors keeps the five names as constants in place of the enum. The
generator writes those constants and DefaultConfig is regenerated from it, byte
for byte reproducible as before.