@@ -1,11 +1,9 @@
 package com.sgerrand.paymentcardutil.iso8583;
 
-import com.sgerrand.paymentcardutil.config.FieldProcessor;
 import com.sgerrand.paymentcardutil.config.IsoConfig;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.EnumMap;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -17,14 +15,12 @@ import java.util.Objects;
  * @param hexBitmap {@code true} if the bitmap is written as 32 hex characters rather than 16 raw
  *     bytes
  * @param config the message layout
- * @param codecs which codec pulls a field apart, by the processor the layout names. Anything left
- *     out keeps the built in codec, so a caller only has to name what they are replacing
+ * @param codecs which codec pulls a field apart, by the processor name the layout uses. Anything
+ *     left out keeps the built in codec of that name, so a caller only has to name what they are
+ *     adding or replacing
  */
 public record Iso8583Options(
-        Charset charset,
-        boolean hexBitmap,
-        IsoConfig config,
-        Map<FieldProcessor, FieldCodec> codecs) {
+        Charset charset, boolean hexBitmap, IsoConfig config, Map<String, FieldCodec> codecs) {
 
     /** The default character set, matching cardutil's {@code latin_1}. */
     public static final Charset DEFAULT_CHARSET = StandardCharsets.ISO_8859_1;
@@ -41,11 +37,7 @@ public record Iso8583Options(
     public Iso8583Options {
         Objects.requireNonNull(charset, "charset");
         Objects.requireNonNull(config, "config");
-        // EnumMap's copy constructor cannot take an empty plain map, and an
-        // empty map is the usual case: no codec replaced.
-        Map<FieldProcessor, FieldCodec> copy = new EnumMap<>(FieldProcessor.class);
-        copy.putAll(Objects.requireNonNull(codecs, "codecs"));
-        codecs = Collections.unmodifiableMap(copy);
+        codecs = Map.copyOf(Objects.requireNonNull(codecs, "codecs"));
     }
 
     /** Settings with the built in codec for every field processor. */
@@ -74,20 +66,33 @@ public record Iso8583Options(
      * The same settings, reading a field processor with a codec of your own.
      *
      * <p>This is how a layout that packs something else inside an element is read: write a {@link
-     * FieldCodec}, put it in place of the processor the config names, and the reader uses it. The
-     * reader has no list of its own to add to.
+     * FieldCodec}, register it under the name the config gives that field, and the reader uses it.
+     * The name is yours to choose — the reader has no list of its own to add to — so a config
+     * saying {@code "field_processor": "BRANCH-CODE"} needs only a codec of that name.
+     *
+     * @param processor the processor name the layout uses, such as one of {@link
+     *     com.sgerrand.paymentcardutil.config.FieldProcessors}
      */
-    public Iso8583Options withCodec(FieldProcessor processor, FieldCodec codec) {
-        Map<FieldProcessor, FieldCodec> replaced = new EnumMap<>(FieldProcessor.class);
-        replaced.putAll(codecs);
+    public Iso8583Options withCodec(String processor, FieldCodec codec) {
+        Map<String, FieldCodec> replaced = new LinkedHashMap<>(codecs);
         replaced.put(
                 Objects.requireNonNull(processor, "processor"),
                 Objects.requireNonNull(codec, "codec"));
         return new Iso8583Options(charset, hexBitmap, config, replaced);
     }
 
-    /** The codec that pulls a field with this processor apart. */
-    public FieldCodec codec(FieldProcessor processor) {
+    /**
+     * The codec that pulls a field with this processor apart.
+     *
+     * <p>A name nobody has a codec for leaves the field as it stands, which is what cardutil does
+     * with a processor it does not know.
+     */
+    public FieldCodec codec(String processor) {
+        // Most fields name no processor at all, and an immutable map will not
+        // even be asked about a null key.
+        if (processor == null) {
+            return FieldCodecs.NO_EXTRAS;
+        }
         FieldCodec codec = codecs.get(processor);
         return codec != null ? codec : FieldCodecs.of(processor);
     }
